--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,7 +13,6 @@ year = {2021},
 doi = {10.1142/S0217751X21501025},
 URL = {https://doi.org/10.1142/S0217751X21501025},
 preview={Quantum_Erasers.png},
-google_scholar_id={u-x6o8ySG0sC},
 abstract = { Using T-duality, we will argue that a zero point length exists in the low-energy effective field theory of string theory on compactified extra dimensions. Furthermore, if we neglect all the oscillator modes, this zero point length would modify low quantum mechanical systems. As this zero length is fixed geometrically, it is important to analyze how it modifies purely quantum mechanical effects. Thus, we will analyze its effects on quantum erasers, because they are based on quantum effects like entanglement. It will be observed that the behavior of these quantum erasers gets modified by this zero point length. As the zero point length is fixed by the radius of compactification, we argue that these results demonstrate a deeper connection between geometry and quantum effects. }
 }
 
@@ -29,7 +28,6 @@ year = {2021},
 doi = {10.1142/S0217751X21501153},
 URL = {https://doi.org/10.1142/S0217751X21501153},
 preview={TCUP.png},
-google_scholar_id={IjCSPb-OGe4C},
 abstract = { It is known that probing gravity in the submillimeter–micrometer range is difficult due to the relative weakness of the gravitational force. We intend to overcome this challenge by using extreme temporal precision to monitor transient events in a gravitational field. We propose a compressed ultrafast photography system called T-CUP to serve this purpose. We show that the T-CUP’s precision of 10 trillion frames per second can allow us to better resolve gravity at short distances. We also show the feasibility of the setup in measuring Yukawa and power-law corrections to gravity which have substantial theoretical motivation. }
 }
 
@@ -46,7 +44,6 @@ doi = {https://doi.org/10.1016/j.comptc.2020.113059},
 url = {https://www.sciencedirect.com/science/article/pii/S2210271X20303595},
 author = {Hrishikesh Patel and Bernie D. Shizgal},
 preview={FPE.png},
-google_scholar_id={2osOgNQ5qMEC},
 abstract = {Numerous satellite measurements of the energy distributions of electrons and ions in the solar system and beyond can be fitted with the Kappa distribution. The origin of these Kappa distributions has attracted considerable attention. In particular, it has been used to support the Tsallis entropy formalism that purports to explain the origin of these distributions. In this paper, we compare the Kappa distribution of space plasmas modelled with a particular Fokker–Planck equation for a two component system with the linear Fokker–Planck equation that has been used to study the Student t-distribution. Pseudospectral solutions of the Fokker–Planck equation for the Student-t distribution based on the steady solution are not convergent owing to its asymptotic power law behaviour. We transform the Fokker–Planck equation to the isospectral Schrödinger equation which yields a Rosen-Morse II potential. The eigenfunctions and eigenvalues of this Schrödinger equation are obtained with a nonclassical pseudospectral method in comparison with a Fourier method and a method based on Hermite polynomials. The nonclassical pseudospectral method converges faster than these other basis sets and agrees with the known eigenvalues.}
 }
 
@@ -61,7 +58,6 @@ abstract = {Numerous satellite measurements of the energy distributions of elect
   year={2021},
   publisher={Nature Publishing Group},
   preview={A-GUP.png},
-  google_scholar_id={qjMakFHDy7sC},
   doi={https://doi.org/10.1038/s41598-021-86355-3}
 }
 
@@ -78,8 +74,7 @@ pages = {045017},
 author = {Jake S Bobowski and Hrishikesh Patel and Mir Faizal},
 title = {Novel setup for detecting short-range anisotropic corrections to gravity},
 journal = {Physica Scripta},
-preview={Grav_Asym.pdf},
-google_scholar_id={Y0pCki6q_DkC},
+preview={Grav_Asym.png},
 abstract = {In this paper we argue that, even though there are strong theoretical and empirical reasons to expect a violation of spatial isotropy at short distances, contemporary setups for probing gravitational interactions at short distances have not been configured to measure such spatial anisotropies. We propose a simple modification to the state-of-the-art torsion pendulum design and numerically demonstrate that it suppresses signals due to the large spatially-isotropic component of the gravitational force while maintaining a high sensitivity to short-range spatial anisotropies. We incorporate anisotropy using both Yukawa-type and power-law-type short-distance corrections to gravity. The proposed differential torsion pendulum is shown to be capable of making sensitive measurements of small gravitational anisotropies and the resulting anisotropic torques are largely independent of the details of the underlying short-distance modification to gravity. Thus, if there is an anisotropic modification to gravity, from any theory, in any form of the modified potential, the proposed setup provides a practical means of detecting it.}
 }
 
@@ -92,7 +87,6 @@ abstract = {In this paper we argue that, even though there are strong theoretica
   title = {Ab initio in-medium similarity renormalization group for open-shell atomic systems},
   publisher = {arXiv},
   year = {2022},
-  google_scholar_id={qyhmnyLat1gC},
   copyright = {Creative Commons Attribution 4.0 International}
 }
 
@@ -111,8 +105,7 @@ abstract = {In this paper we argue that, even though there are strong theoretica
 	month = jan,
 	year = {2024},
 	pages = {017002},
-  preview={dmon.pdf},
-  google_scholar_id={LkGwnXOMwfcC}
+  	preview={dmon.png},
 }
 
 
@@ -125,7 +118,6 @@ abstract = {In this paper we argue that, even though there are strong theoretica
   author={Patel, Hrishikesh}, 
   year={2023}, 
   month={Aug}, 
-  preview={449_thesis.pdf},
-  google_scholar_id={ufrVoPGSRksC},
+  preview={449_thesis.png},
   collection={Undergraduate Research}
 }
